// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select can have an error message 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 > *:not(:last-child) {
  margin-right: 1rem;
}

.c5 {
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 1rem;
  padding-bottom: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c4 {
  border-radius: 4px;
  background-color: #fff6f8;
}

.c11 {
  line-height: 1;
}

.c7 {
  background-color: #fff;
  position: relative;
}

.c8 {
  height: 3.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  -moz-appearance: textfield;
  min-height: 3.25rem;
  max-height: 3.25rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c8::-ms-expand {
  display: none;
}

.c8::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c8::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c8:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c8::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c8::-webkit-inner-spin-button,
.c8::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c8:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c8:not(:focus) {
  border-color: #c12335;
}

.c9 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c12 {
  line-height: 1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  position: relative;
}

@media (min-width:768px) {
  .c0 > *:not(:last-child) {
    margin-bottom: 0.5rem;
  }
}

@media (min-width:768px) {
  .c1 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c3 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (min-width:768px) {
  .c10 > *:not(:last-child) {
    margin-right: 1rem;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 1rem;
    padding-bottom: 1rem;
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

<Select
  defaultValue=""
  error="Oh no a terrible error!"
  feedback="error"
  id="some-id"
  label="The select"
  options={
    Array [
      Object {
        "readOnly": true,
        "text": "text one",
        "value": "value-1",
      },
      Object {
        "readOnly": true,
        "text": "text two",
        "value": "value-2",
      },
    ]
  }
>
  <Box
    between={2}
    inline={false}
    tag="div"
  >
    <styled.div
      between={2}
      inline={false}
      tag="div"
    >
      <StyledComponent
        between={2}
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [
              [Function],
            ],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "c10",
              "rules": Array [
                [Function],
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        inline={false}
        tag="div"
      >
        <div
          className="c0"
        >
          <Box
            between="space-between"
            inline={true}
            tag="div"
          >
            <styled.div
              between="space-between"
              inline={true}
              tag="div"
            >
              <StyledComponent
                between="space-between"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [
                      [Function],
                    ],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bdVaJa",
                      "isStatic": false,
                      "lastClassName": "c10",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bdVaJa",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                inline={true}
                tag="div"
              >
                <div
                  className="c1"
                >
                  <label
                    htmlFor="some-id"
                  >
                    <Styled(Box)
                      between={2}
                      inline={true}
                      tag="span"
                    >
                      <StyledComponent
                        between={2}
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bZQynM",
                              "isStatic": true,
                              "lastClassName": "c2",
                              "rules": Array [
                                "align-items: center;",
                              ],
                            },
                            "displayName": "Styled(Box)",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bZQynM",
                            "target": [Function],
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        inline={true}
                        tag="span"
                      >
                        <Box
                          between={2}
                          className="c2"
                          inline={true}
                          tag="span"
                        >
                          <styled.div
                            between={2}
                            className="c2"
                            inline={true}
                            tag="span"
                          >
                            <StyledComponent
                              between={2}
                              className="c2"
                              forwardedComponent={
                                Object {
                                  "$$typeof": Symbol(react.forward_ref),
                                  "attrs": Array [
                                    [Function],
                                  ],
                                  "componentStyle": ComponentStyle {
                                    "componentId": "sc-bdVaJa",
                                    "isStatic": false,
                                    "lastClassName": "c10",
                                    "rules": Array [
                                      [Function],
                                    ],
                                  },
                                  "displayName": "styled.div",
                                  "foldedComponentIds": Array [],
                                  "render": [Function],
                                  "styledComponentId": "sc-bdVaJa",
                                  "target": "div",
                                  "toString": [Function],
                                  "warnTooManyClasses": [Function],
                                  "withComponent": [Function],
                                }
                              }
                              forwardedRef={null}
                              inline={true}
                              tag="span"
                            >
                              <span
                                className="c2 sc-bZQynM c2 c3"
                              >
                                <Text
                                  block={false}
                                  bold={true}
                                  data-testid="selectLabel"
                                  invert={false}
                                  size="medium"
                                >
                                  <span
                                    className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                                    data-testid="selectLabel"
                                  >
                                    The select
                                  </span>
                                </Text>
                              </span>
                            </StyledComponent>
                          </styled.div>
                        </Box>
                      </StyledComponent>
                    </Styled(Box)>
                  </label>
                </div>
              </StyledComponent>
            </styled.div>
          </Box>
          <InputFeedback
            feedback="error"
            id="some-id_error-message"
          >
            <Styled(Component)
              feedback="error"
              id="some-id_error-message"
              inset={3}
              role="alert"
            >
              <StyledComponent
                feedback="error"
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-bwzfXH",
                      "isStatic": false,
                      "lastClassName": "c4",
                      "rules": Array [
                        [Function],
                      ],
                    },
                    "displayName": "Styled(Component)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-bwzfXH",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
                id="some-id_error-message"
                inset={3}
                role="alert"
              >
                <Component
                  className="c4"
                  feedback="error"
                  id="some-id_error-message"
                  inset={3}
                  role="alert"
                >
                  <Box
                    className="c4"
                    id="some-id_error-message"
                    inline={false}
                    inset={3}
                    role="alert"
                    tag="div"
                  >
                    <styled.div
                      className="c4"
                      id="some-id_error-message"
                      inline={false}
                      inset={3}
                      role="alert"
                      tag="div"
                    >
                      <StyledComponent
                        className="c4"
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [
                              [Function],
                            ],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bdVaJa",
                              "isStatic": false,
                              "lastClassName": "c10",
                              "rules": Array [
                                [Function],
                              ],
                            },
                            "displayName": "styled.div",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bdVaJa",
                            "target": "div",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        id="some-id_error-message"
                        inline={false}
                        inset={3}
                        role="alert"
                        tag="div"
                      >
                        <div
                          className="c4 sc-bwzfXH c4 c5"
                          id="some-id_error-message"
                          role="alert"
                        >
                          <Paragraph
                            align="left"
                            bold={false}
                            invert={false}
                            size="small"
                          >
                            <p
                              className="TDS_Typography-modules__wordBreak___3OZx_ TDS_Spacing-modules__noSpacing___XPYDG TDS_Typography-modules__color___2CNH8 TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Paragraph-modules__leftAlign___KgwhE TDS_Typography-modules__default___KlcpP"
                            >
                              Oh no a terrible error!
                            </p>
                          </Paragraph>
                        </div>
                      </StyledComponent>
                    </styled.div>
                  </Box>
                </Component>
              </StyledComponent>
            </Styled(Component)>
          </InputFeedback>
          <styled.div
            _css={
              Object {
                "position": "relative",
              }
            }
          >
            <StyledComponent
              _css={
                Object {
                  "position": "relative",
                }
              }
              forwardedComponent={
                Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-gzVnrw",
                    "isStatic": false,
                    "lastClassName": "c6",
                    "rules": Array [
                      [Function],
                    ],
                  },
                  "displayName": "styled.div",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-gzVnrw",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                }
              }
              forwardedRef={null}
            >
              <div
                className="c6"
              >
                <Select__SelectWrapper>
                  <StyledComponent
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "Select__SelectWrapper-sc-1kajzpi-0",
                          "isStatic": true,
                          "lastClassName": "c7",
                          "rules": Array [
                            "background-color: #fff;",
                            "position: relative;",
                          ],
                        },
                        "displayName": "Select__SelectWrapper",
                        "foldedComponentIds": Array [],
                        "render": [Function],
                        "styledComponentId": "Select__SelectWrapper-sc-1kajzpi-0",
                        "target": "div",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <div
                      className="c7"
                    >
                      <Select__StyledSelect
                        aria-describedby="some-id_error-message"
                        aria-invalid={true}
                        defaultValue=""
                        feedback="error"
                        id="some-id"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <StyledComponent
                          aria-describedby="some-id_error-message"
                          aria-invalid={true}
                          defaultValue=""
                          feedback="error"
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "Select__StyledSelect-sc-1kajzpi-1",
                                "isStatic": false,
                                "lastClassName": "c8",
                                "rules": Array [
                                  "height: 3.25rem;",
                                  "appearance: none;",
                                  "&::-ms-expand {",
                                  "display: none;",
                                  "}",
                                  "width: 100%;",
                                  "margin: 0;",
                                  "outline: 0;",
                                  "text-overflow: ellipsis;",
                                  "border-color: #54595f;",
                                  "background-color: #fff;",
                                  "&::placeholder {",
                                  "font: inherit;",
                                  "letter-spacing: inherit;",
                                  "line-height: inherit;",
                                  "color: #54595f;",
                                  "}",
                                  [Function],
                                  "border-width: 1px;",
                                  "border-style: solid;",
                                  "border-radius: 4px;",
                                  "font-family: \\"TELUS-Web\\", \\"Helvetica Neue\\", Helvetica, Arial, sans-serif;",
                                  "word-wrap: break-word;",
                                  "font-size: 1rem;",
                                  "letter-spacing: -0.8px;",
                                  "line-height: 1.5;",
                                  "font-weight: 400;",
                                  "color: #2a2c2e;",
                                  [Function],
                                  "&:focus {",
                                  "border-color: transparent;",
                                  "box-shadow: 0 0 4px 1px #54595f;",
                                  "background-color: #fff;",
                                  "}",
                                  [Function],
                                  [Function],
                                ],
                              },
                              "displayName": "Select__StyledSelect",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "Select__StyledSelect-sc-1kajzpi-1",
                              "target": "select",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          id="some-id"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          <select
                            aria-describedby="some-id_error-message"
                            aria-invalid={true}
                            className="c8"
                            defaultValue=""
                            id="some-id"
                            onBlur={[Function]}
                            onFocus={[Function]}
                          >
                            <option
                              key="value-1"
                              value="value-1"
                            >
                              text one
                            </option>
                            <option
                              key="value-2"
                              value="value-2"
                            >
                              text two
                            </option>
                          </select>
                        </StyledComponent>
                      </Select__StyledSelect>
                      <Styled(Box)
                        between={3}
                        inline={true}
                      >
                        <StyledComponent
                          between={3}
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "sc-EHOje",
                                "isStatic": true,
                                "lastClassName": "c9",
                                "rules": Array [
                                  "position: absolute;",
                                  "top: 50%;",
                                  "transform: translateY(-50%);",
                                  "right: 1rem;",
                                  "pointer-events: none;",
                                ],
                              },
                              "displayName": "Styled(Box)",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "sc-EHOje",
                              "target": [Function],
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                          inline={true}
                        >
                          <Box
                            between={3}
                            className="c9"
                            inline={true}
                            tag="div"
                          >
                            <styled.div
                              between={3}
                              className="c9"
                              inline={true}
                              tag="div"
                            >
                              <StyledComponent
                                between={3}
                                className="c9"
                                forwardedComponent={
                                  Object {
                                    "$$typeof": Symbol(react.forward_ref),
                                    "attrs": Array [
                                      [Function],
                                    ],
                                    "componentStyle": ComponentStyle {
                                      "componentId": "sc-bdVaJa",
                                      "isStatic": false,
                                      "lastClassName": "c10",
                                      "rules": Array [
                                        [Function],
                                      ],
                                    },
                                    "displayName": "styled.div",
                                    "foldedComponentIds": Array [],
                                    "render": [Function],
                                    "styledComponentId": "sc-bdVaJa",
                                    "target": "div",
                                    "toString": [Function],
                                    "warnTooManyClasses": [Function],
                                    "withComponent": [Function],
                                  }
                                }
                                forwardedRef={null}
                                inline={true}
                                tag="div"
                              >
                                <div
                                  className="c9 sc-EHOje c9 c10"
                                >
                                  <FeedbackIcon
                                    feedback="error"
                                    showIcon={true}
                                  >
                                    <Fade
                                      in={true}
                                      mountOnEnter={true}
                                      timeout={100}
                                      unmountOnExit={true}
                                    >
                                      <Transition
                                        appear={false}
                                        enter={true}
                                        exit={true}
                                        in={true}
                                        mountOnEnter={true}
                                        onEnter={[Function]}
                                        onEntered={[Function]}
                                        onEntering={[Function]}
                                        onExit={[Function]}
                                        onExited={[Function]}
                                        onExiting={[Function]}
                                        timeout={100}
                                        unmountOnExit={true}
                                      >
                                        <div
                                          style={
                                            Object {
                                              "opacity": 1,
                                              "transition": "opacity 100ms ease-in-out",
                                            }
                                          }
                                        >
                                          <FeedbackIcon__StyledIcon>
                                            <StyledComponent
                                              forwardedComponent={
                                                Object {
                                                  "$$typeof": Symbol(react.forward_ref),
                                                  "attrs": Array [],
                                                  "componentStyle": ComponentStyle {
                                                    "componentId": "FeedbackIcon__StyledIcon-yxz8rh-0",
                                                    "isStatic": true,
                                                    "lastClassName": "c11",
                                                    "rules": Array [
                                                      "line-height: 1;",
                                                    ],
                                                  },
                                                  "displayName": "FeedbackIcon__StyledIcon",
                                                  "foldedComponentIds": Array [],
                                                  "render": [Function],
                                                  "styledComponentId": "FeedbackIcon__StyledIcon-yxz8rh-0",
                                                  "target": "div",
                                                  "toString": [Function],
                                                  "warnTooManyClasses": [Function],
                                                  "withComponent": [Function],
                                                }
                                              }
                                              forwardedRef={null}
                                            >
                                              <div
                                                className="c11"
                                              >
                                                <StandaloneIcon
                                                  a11yText="The value of this input field is invalid."
                                                  size={16}
                                                  symbol="exclamationPointCircle"
                                                  variant="error"
                                                >
                                                  <Icon
                                                    aria-label="The value of this input field is invalid."
                                                    size={16}
                                                    symbol="exclamationPointCircle"
                                                    variant="error"
                                                  >
                                                    <i
                                                      aria-label="The value of this input field is invalid."
                                                      className="TDS_Icon-modules__iconExclamationPointCircle___1HgRN TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
                                                    />
                                                  </Icon>
                                                </StandaloneIcon>
                                              </div>
                                            </StyledComponent>
                                          </FeedbackIcon__StyledIcon>
                                        </div>
                                      </Transition>
                                    </Fade>
                                  </FeedbackIcon>
                                  <Select__IconLineFix>
                                    <StyledComponent
                                      forwardedComponent={
                                        Object {
                                          "$$typeof": Symbol(react.forward_ref),
                                          "attrs": Array [],
                                          "componentStyle": ComponentStyle {
                                            "componentId": "Select__IconLineFix-sc-1kajzpi-2",
                                            "isStatic": true,
                                            "lastClassName": "c12",
                                            "rules": Array [
                                              "line-height: 1;",
                                            ],
                                          },
                                          "displayName": "Select__IconLineFix",
                                          "foldedComponentIds": Array [],
                                          "render": [Function],
                                          "styledComponentId": "Select__IconLineFix-sc-1kajzpi-2",
                                          "target": "div",
                                          "toString": [Function],
                                          "warnTooManyClasses": [Function],
                                          "withComponent": [Function],
                                        }
                                      }
                                      forwardedRef={null}
                                    >
                                      <div
                                        className="c12"
                                      >
                                        <DecorativeIcon
                                          size={16}
                                          symbol="caretDown"
                                          variant="error"
                                        >
                                          <Icon
                                            aria-hidden="true"
                                            size={16}
                                            symbol="caretDown"
                                            variant="error"
                                          >
                                            <i
                                              aria-hidden="true"
                                              className="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
                                            />
                                          </Icon>
                                        </DecorativeIcon>
                                      </div>
                                    </StyledComponent>
                                  </Select__IconLineFix>
                                </div>
                              </StyledComponent>
                            </styled.div>
                          </Box>
                        </StyledComponent>
                      </Styled(Box)>
                    </div>
                  </StyledComponent>
                </Select__SelectWrapper>
              </div>
            </StyledComponent>
          </styled.div>
        </div>
      </StyledComponent>
    </styled.div>
  </Box>
</Select>
`;

exports[`Select disabling deactivates the select 1`] = `[Function]`;

exports[`Select disabling removes the positioning of the select so that the disabled treatment is displayed 1`] = `[Function]`;

exports[`Select feedback states ensures that the contents do not overlap the icons 1`] = `[Function]`;

exports[`Select label can have a short hint 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:768px) {
  .c1 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

<label
  htmlFor="the-select"
>
  <Styled(Box)
    between={2}
    inline={true}
    tag="span"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bZQynM",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "align-items: center;",
            ],
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bZQynM",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="c0"
        inline={true}
        tag="span"
      >
        <styled.div
          between={2}
          className="c0"
          inline={true}
          tag="span"
        >
          <StyledComponent
            between={2}
            className="c0"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "jBpgvN",
                  "rules": Array [
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={true}
            tag="span"
          >
            <span
              className="c0 sc-bZQynM c0 c1"
            >
              <Text
                block={false}
                bold={true}
                data-testid="selectLabel"
                invert={false}
                size="medium"
              >
                <span
                  className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                  data-testid="selectLabel"
                >
                  The select
                </span>
              </Text>
              <Text
                block={false}
                bold={false}
                id="the-select_hint"
                invert={false}
                size="small"
              >
                <span
                  className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Typography-modules__color___2CNH8"
                  id="the-select_hint"
                >
                  The short hint
                </span>
              </Text>
            </span>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</label>
`;

exports[`Select label must have a label 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:768px) {
  .c1 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

<label
  htmlFor="the-label"
>
  <Styled(Box)
    between={2}
    inline={true}
    tag="span"
  >
    <StyledComponent
      between={2}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bZQynM",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "align-items: center;",
            ],
          },
          "displayName": "Styled(Box)",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bZQynM",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      inline={true}
      tag="span"
    >
      <Box
        between={2}
        className="c0"
        inline={true}
        tag="span"
      >
        <styled.div
          between={2}
          className="c0"
          inline={true}
          tag="span"
        >
          <StyledComponent
            between={2}
            className="c0"
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [
                  [Function],
                ],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-bdVaJa",
                  "isStatic": false,
                  "lastClassName": "jBpgvN",
                  "rules": Array [
                    [Function],
                  ],
                },
                "displayName": "styled.div",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "sc-bdVaJa",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            inline={true}
            tag="span"
          >
            <span
              className="c0 sc-bZQynM c0 c1"
            >
              <Text
                block={false}
                bold={true}
                data-testid="selectLabel"
                invert={false}
                size="medium"
              >
                <span
                  className="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
                  data-testid="selectLabel"
                >
                  The label
                </span>
              </Text>
            </span>
          </StyledComponent>
        </styled.div>
      </Box>
    </StyledComponent>
  </Styled(Box)>
</label>
`;

exports[`Select needs a set of options 1`] = `[Function]`;

exports[`Select positions the down caret so that the text does not overlap it 1`] = `[Function]`;

exports[`Select renders 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 > *:not(:last-child) {
  margin-right: 1rem;
}

.c5 {
  background-color: #fff;
  position: relative;
}

.c6 {
  height: 3.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  -moz-appearance: textfield;
  min-height: 3.25rem;
  max-height: 3.25rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c6::-ms-expand {
  display: none;
}

.c6::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-webkit-inner-spin-button,
.c6::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c6:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c9 {
  line-height: 1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
}

@media (min-width:768px) {
  .c0 > *:not(:last-child) {
    margin-bottom: 0.5rem;
  }
}

@media (min-width:768px) {
  .c1 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c3 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (min-width:768px) {
  .c8 > *:not(:last-child) {
    margin-right: 1rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      for="the-select"
    >
      <span
        class="c2 sc-bZQynM c2 c3"
      >
        <span
          class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
          data-testid="selectLabel"
        >
          The select
        </span>
      </span>
    </label>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <select
        aria-invalid="false"
        class="c6"
        id="the-select"
      >
        <option
          value="value-1"
        >
          text one
        </option>
        <option
          value="value-2"
        >
          text two
        </option>
      </select>
      <div
        class="c7 sc-EHOje c7 c8"
      >
        <div
          class="c9"
        >
          <i
            aria-hidden="true"
            class="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__primary___2UY-N TDS_Icon-modules__size16___1pm12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders with a feedback state and icon 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:last-child) {
  margin-bottom: 0.5rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 > *:not(:last-child) {
  margin-right: 0.5rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c8 > *:not(:last-child) {
  margin-right: 1rem;
}

.c9 {
  line-height: 1;
}

.c5 {
  background-color: #fff;
  position: relative;
}

.c6 {
  height: 3.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  width: 100%;
  margin: 0;
  outline: 0;
  text-overflow: ellipsis;
  border-color: #54595f;
  background-color: #fff;
  padding: 0.5rem 3rem 0.5rem 1rem;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  line-height: 1.5;
  font-weight: 400;
  color: #2a2c2e;
  -moz-appearance: textfield;
  min-height: 3.25rem;
  max-height: 3.25rem;
  padding: 0.5rem 3rem 0.5rem 1rem;
}

.c6::-ms-expand {
  display: none;
}

.c6::-webkit-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-moz-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6:-ms-input-placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::placeholder {
  font: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: inherit;
  color: #54595f;
}

.c6::-webkit-inner-spin-button,
.c6::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

.c6:focus {
  border-color: transparent;
  box-shadow: 0 0 4px 1px #54595f;
  background-color: #fff;
}

.c6:not(:focus) {
  border-color: #c12335;
}

.c7 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 1rem;
  pointer-events: none;
}

.c10 {
  line-height: 1;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
}

@media (min-width:768px) {
  .c0 > *:not(:last-child) {
    margin-bottom: 0.5rem;
  }
}

@media (min-width:768px) {
  .c1 {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:768px) {
  .c3 > *:not(:last-child) {
    margin-right: 0.5rem;
  }
}

@media (min-width:768px) {
  .c8 > *:not(:last-child) {
    margin-right: 1rem;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <label
      for="the-select"
    >
      <span
        class="c2 sc-bZQynM c2 c3"
      >
        <span
          class="TDS_Typography-modules__default___KlcpP TDS_Typography-modules__medium___1rxfE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__boldFont___2YS3O TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__color___2CNH8"
          data-testid="selectLabel"
        >
          The select
        </span>
      </span>
    </label>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5"
    >
      <select
        aria-invalid="true"
        class="c6"
        id="the-select"
      >
        <option
          value="value-1"
        >
          text one
        </option>
        <option
          value="value-2"
        >
          text two
        </option>
      </select>
      <div
        class="c7 sc-EHOje c7 c8"
      >
        <div
          style="transition:opacity 100ms ease-in-out;opacity:1"
        >
          <div
            class="c9"
          >
            <i
              aria-label="The value of this input field is invalid."
              class="TDS_Icon-modules__iconExclamationPointCircle___1HgRN TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
            />
          </div>
        </div>
        <div
          class="c10"
        >
          <i
            aria-hidden="true"
            class="TDS_Icon-modules__iconCaretDown___3by8b TDS_Icon-modules__icon___13xYd TDS_Icon-modules__error___yuB9x TDS_Icon-modules__size16___1pm12"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
